--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -688,6 +688,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "## I am using the example on this question:\n",
+      "get_batches([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20], 3, 2):\n",
+      "[[[[ 1  2]\n",
+      "   [ 7  8]\n",
+      "   [13 14]]\n",
+      "\n",
+      "  [[ 2  3]\n",
+      "   [ 8  9]\n",
+      "   [14 15]]]\n",
+      "\n",
+      "\n",
+      " [[[ 3  4]\n",
+      "   [ 9 10]\n",
+      "   [15 16]]\n",
+      "\n",
+      "  [[ 4  5]\n",
+      "   [10 11]\n",
+      "   [16 17]]]\n",
+      "\n",
+      "\n",
+      " [[[ 5  6]\n",
+      "   [11 12]\n",
+      "   [17 18]]\n",
+      "\n",
+      "  [[ 6  7]\n",
+      "   [12 13]\n",
+      "   [18  1]]]]\n",
+      "##\n",
       "Tests Passed\n"
      ]
     }
@@ -709,14 +737,18 @@
     "    \n",
     "    x_batches = np.split(x_data.reshape(batch_size, -1), n_batches, 1)\n",
     "    y_batches = np.split(y_data.reshape(batch_size, -1), n_batches, 1)\n",
+    "    maxid_0 = len(y_batches)-1\n",
+    "    maxid_1 = len(y_batches[maxid_0])-1\n",
+    "    maxid_2 = len(y_batches[maxid_0][maxid_1])-1\n",
+    "    y_batches[maxid_0][maxid_1][maxid_2] = x_batches[0][0][0]\n",
     "\n",
     "    batches = np.array(list(zip(x_batches, y_batches)))\n",
-    "    maxid_0 = len(batches)-1\n",
-    "    maxid_1 = len(batches[maxid_0])-1\n",
-    "    maxid_2 = len(batches[maxid_0][maxid_1])-1\n",
-    "    maxid_3 = len(batches[maxid_0][maxid_1][maxid_2])-1\n",
-    "    batches[maxid_0][maxid_1][maxid_2][maxid_3] = batches[0][0][0][0]\n",
     "    return batches\n",
+    "\n",
+    "print('## I am using the example on this question:')\n",
+    "print('get_batches([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20], 3, 2):')\n",
+    "print(get_batches([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20], 3, 2))\n",
+    "print('##')\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
