--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -688,34 +688,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "## I am using the example on this question:\n",
-      "get_batches([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20], 3, 2):\n",
-      "[[[[ 1  2]\n",
-      "   [ 7  8]\n",
-      "   [13 14]]\n",
-      "\n",
-      "  [[ 2  3]\n",
-      "   [ 8  9]\n",
-      "   [14 15]]]\n",
-      "\n",
-      "\n",
-      " [[[ 3  4]\n",
-      "   [ 9 10]\n",
-      "   [15 16]]\n",
-      "\n",
-      "  [[ 4  5]\n",
-      "   [10 11]\n",
-      "   [16 17]]]\n",
-      "\n",
-      "\n",
-      " [[[ 5  6]\n",
-      "   [11 12]\n",
-      "   [17 18]]\n",
-      "\n",
-      "  [[ 6  7]\n",
-      "   [12 13]\n",
-      "   [18  1]]]]\n",
-      "##\n",
       "Tests Passed\n"
      ]
     }
@@ -733,22 +705,18 @@
     "    n_batches = len(int_text) // (batch_size * seq_length) \n",
     "\n",
     "    x_data = np.array(int_text[:n_batches * batch_size * seq_length])\n",
-    "    y_data = np.array(int_text[1:n_batches * batch_size * seq_length + 1])\n",
+    "    y_data = np.roll(x_data, -1)\n",
     "    \n",
     "    x_batches = np.split(x_data.reshape(batch_size, -1), n_batches, 1)\n",
     "    y_batches = np.split(y_data.reshape(batch_size, -1), n_batches, 1)\n",
-    "    maxid_0 = len(y_batches)-1\n",
-    "    maxid_1 = len(y_batches[maxid_0])-1\n",
-    "    maxid_2 = len(y_batches[maxid_0][maxid_1])-1\n",
-    "    y_batches[maxid_0][maxid_1][maxid_2] = x_batches[0][0][0]\n",
     "\n",
     "    batches = np.array(list(zip(x_batches, y_batches)))\n",
     "    return batches\n",
     "\n",
-    "print('## I am using the example on this question:')\n",
-    "print('get_batches([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20], 3, 2):')\n",
-    "print(get_batches([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20], 3, 2))\n",
-    "print('##')\n",
+    "# print('## I am using the example on this question:')\n",
+    "# print('get_batches([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20], 3, 2):')\n",
+    "# print(get_batches([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20], 3, 2))\n",
+    "# print('##')\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
